Search page - Map fix overflow navbar

--- a/app/assets/stylesheets/components/_panel.scss
+++ b/app/assets/stylesheets/components/_panel.scss
@@ -21,6 +21,8 @@
   color: $middle-gray;
   padding: 10px 15px;
   box-shadow: 5px 8px 15px #697975;
+  // fixed on search page -> when discription is longer (layout)
+  min-height: 65px;
 }
 
 .row-space-1 {
